[gd_scene load_steps=13 format=3 uid="uid://do1wlvlyap5qe"]

[ext_resource type="Script" path="res://build_system/CameraController.gd" id="1_8nekg"]
[ext_resource type="Script" path="res://build_system/BuildManager.gd" id="2_6sqvt"]
[ext_resource type="AudioStream" uid="uid://cbw376xee8vb8" path="res://build_system/assets/audio/dreamy-114855.mp3" id="4_iwdor"]
[ext_resource type="AudioStream" uid="uid://d1udnkcko5glv" path="res://build_system/assets/audio/spawn.ogg" id="5_ag0hx"]
[ext_resource type="PackedScene" uid="uid://bjrlf8qq8nixx" path="res://build_system/GUI/GUI.tscn" id="5_urdu2"]
[ext_resource type="AudioStream" uid="uid://1m5ahsgi57ja" path="res://build_system/assets/audio/remove.ogg" id="5_uubho"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kc36m"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_i5pdg"]
sky_material = SubResource("ProceduralSkyMaterial_kc36m")

[sub_resource type="Environment" id="Environment_8m0yn"]
background_mode = 1
background_color = Color(0.466667, 0.568627, 0.564706, 1)
sky = SubResource("Sky_i5pdg")
ambient_light_source = 1
tonemap_mode = 2
ssr_max_steps = 512
ssil_enabled = true
sdfgi_enabled = true
sdfgi_read_sky_light = false
sdfgi_normal_bias = 30.0
glow_enabled = true
glow_strength = 0.69
glow_bloom = 0.47
fog_enabled = true
fog_light_color = Color(0.384314, 0.482353, 0.478431, 1)
fog_light_energy = 0.37
fog_density = 0.02
volumetric_fog_albedo = Color(0.607843, 0.843137, 0.960784, 1)
volumetric_fog_detail_spread = 1.5
volumetric_fog_ambient_inject = 0.26
adjustment_enabled = true
adjustment_contrast = 1.56
adjustment_saturation = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_01xy2"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_j1t4q"]
material = SubResource("StandardMaterial3D_01xy2")
radius = 0.1
height = 0.2

[sub_resource type="LabelSettings" id="LabelSettings_op41w"]
font_size = 22
font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[node name="BuildSystem" type="Node3D"]
script = ExtResource("2_6sqvt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.781525, -0.600445, 0.169366, 0.36449, 0.659773, 0.65715, -0.506326, -0.451847, 0.734485, 0, 8.39534, 0)
light_energy = 0.8
shadow_enabled = true
shadow_opacity = 0.6
directional_shadow_blend_splits = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8m0yn")

[node name="assist_point" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.494439, 0)
visible = false
mesh = SubResource("SphereMesh_j1t4q")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 0, 0)
visible = false
script = ExtResource("1_8nekg")
metadata/_edit_lock_ = true

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)

[node name="GUI" parent="." instance=ExtResource("5_urdu2")]

[node name="BuildingContainer" type="Node3D" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_iwdor")
autoplay = true

[node name="Spawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ag0hx")

[node name="Remove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_uubho")

[node name="Label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 77.0
grow_vertical = 0
text = "[R] Rotate   [C] Clean  [RightMouse] Remove"
label_settings = SubResource("LabelSettings_op41w")

[connection signal="build_btn_click" from="GUI" to="." method="_on_gui_build_btn_click"]
[connection signal="build_item_mouse_entered" from="GUI" to="CameraController" method="_on_gui_build_item_mouse_entered"]
[connection signal="build_item_mouse_exited" from="GUI" to="CameraController" method="_on_gui_build_item_mouse_exited"]
[connection signal="mouse_entered" from="GUI" to="CameraController" method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="GUI" to="CameraController" method="_on_gui_mouse_exited"]
[connection signal="child_entered_tree" from="BuildingContainer" to="." method="_on_building_container_child_entered_tree"]
[connection signal="child_exiting_tree" from="BuildingContainer" to="." method="_on_building_container_child_exiting_tree"]
